fix on mobile 📞

--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ html, body {
 /* Offline page */
 
 .offline .interstitial-wrapper {
+  position: relative;
   color: #2b2b2b;
   background-color: white;
   border: 5px solid #ff8063;
@@ -49,20 +50,19 @@ html, body {
   width: 100%;
   height: 150px;
   margin: auto;
+  box-sizing: border-box;
 }
 
 .offline .runner-container {
   height: 150px;
-  max-width: 600px;
+  max-width: 590px;
   overflow: hidden;
-  position: absolute;
-  top: 267px;
   width: 44px;
 }
 
 .offline .runner-canvas {
   height: 150px;
-  max-width: 600px;
+  max-width: 590px;
   opacity: 1;
   overflow: hidden;
   position: absolute;
